syntax = "proto3";

package aura.v1;

import "aura/blocklist/v1/genesis.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ondoprotocol/usdy-noble/x/aura/types";

message GenesisState {
  // blocklist_state is the genesis state of the blocklist submodule.
  aura.blocklist.v1.GenesisState blocklist_state = 1 [(gogoproto.nullable) = false];

  // paused is the paused state of this module.
  bool paused = 2;

  // owner is the address that can control this module.
  string owner = 3;
  // pending_owner is the address of the new owner during an ownership transfer.
  string pending_owner = 4;

  // burners is the list of addresses that can burn USDY.
  repeated Burner burners = 5 [(gogoproto.nullable) = false];
  // minters is the list of addresses that can mint USDY.
  repeated Minter minters = 6 [(gogoproto.nullable) = false];
  // pausers is the list of addresses that can pause USDY.
  repeated string pausers = 7;

  // blocked_channels is the list of IBC channels where transfers are blocked.
  repeated string blocked_channels = 8;
}

//

message Burner {
  string address = 1;
  string allowance = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message Minter {
  string address = 1;
  string allowance = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
